In the editor dropzone, click on an image means editing. To insert the image into text, a new item in the dropdown menu is created.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -299,6 +299,7 @@
   "in-friends": "In friends",
   "inline-formula": "Inline formula",
   "in-post": "In the post",
+  "insert-into-text": "Insert into text...",
   "insert-link": "Insert a link",
   "insert-mention": "Insert a mention",
   "instants": "Notifications",
