--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -299,6 +299,7 @@
   "in-friends": "В друзьях",
   "inline-formula": "Встроенная формула",
   "in-post": "В посте",
+  "insert-into-text": "Вставить в текст...",
   "insert-link": "Вставить ссылку",
   "insert-mention": "Вставить упоминание",
   "instants": "Уведомления",
