--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -299,6 +299,7 @@
   "in-friends": "У друзях",
   "inline-formula": "Вбудована формула",
   "in-post": "У пості",
+  "insert-into-text": "Вставити в текст...",
   "insert-link": "Вставити посилання",
   "insert-mention": "Вставити згадку",
   "instants": "Повідомлення",
