--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -299,6 +299,7 @@
   "in-friends": "W znajomych",
   "inline-formula": "Formuła w tekście",
   "in-post": "W poście",
+  "insert-into-text": "Wstaw do tekstu...",
   "insert-link": "Wstaw link",
   "insert-mention": "Wstaw wzmiankę",
   "instants": "Powiadomienia",
