Posting reply in HTML format for the visual editor.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -737,7 +737,8 @@
         "posting_reactions_self_enabled": "Allow to add reactions to your own posts",
         "posting_reactions_totals-visible_default": "Show the number of reactions to my post by default",
         "posting_reactions_visible_default": "Show the detailed list of reactions to my post by default",
-        "posting_reply_preamble": "Post reply preamble",
+        "posting_reply_preamble": "Post reply preamble (Markdown)",
+        "posting_reply_preamble-html": "Post reply preamble (HTML)",
         "posting_reply_quote-all": "Quote the whole post on reply",
         "posting_reply_subject-prefix": "Post reply title prefix",
         "posting_smileys_enabled": "Replace simple smileys with emojis",
