--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -737,7 +737,8 @@
         "posting_reactions_self_enabled": "Zezwól na dodawanie reakcji do własnych postów",
         "posting_reactions_totals-visible_default": "Domyślnie pokaż liczbę reakcji na mój post",
         "posting_reactions_visible_default": "Domyślnie pokaż szczegółową listę reakcji na mój post",
-        "posting_reply_preamble": "Wstęp do odpowiedzi na post",
+        "posting_reply_preamble": "Wstęp do odpowiedzi na post (Markdown)",
+        "posting_reply_preamble-html": "Wstęp do odpowiedzi na post (HTML)",
         "posting_reply_quote-all": "Cytuj cały post w odpowiedzi",
         "posting_reply_subject-prefix": "Prefiks tytułu odpowiedzi na post",
         "posting_smileys_enabled": "Zamień proste emotikony na emoji",
