--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -737,7 +737,8 @@
         "posting_reactions_self_enabled": "Разрешить оставлять реакции на собственные посты",
         "posting_reactions_totals-visible_default": "Показывать число реакций на мой пост (по умолчанию)",
         "posting_reactions_visible_default": "Показывать список реакций на мой пост (по умолчанию)",
-        "posting_reply_preamble": "Преамбула ответа на пост",
+        "posting_reply_preamble": "Преамбула ответа на пост (Markdown)",
+        "posting_reply_preamble-html": "Преамбула ответа на пост (HTML)",
         "posting_reply_quote-all": "Цитировать пост целиком в ответе",
         "posting_reply_subject-prefix": "Префикс заголовка при ответе на пост",
         "posting_smileys_enabled": "Заменять простые смайлики на эмодзи",
