--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -737,7 +737,8 @@
         "posting_reactions_self_enabled": "Дозволити залишати реакції на власні пости",
         "posting_reactions_totals-visible_default": "Показувати кількість реакцій на мій пост (за замовчуванням)",
         "posting_reactions_visible_default": "Показувати список реакцій на мій пост (за замовчуванням)",
-        "posting_reply_preamble": "Преамбула відповіді на пост",
+        "posting_reply_preamble": "Преамбула відповіді на пост (Markdown)",
+        "posting_reply_preamble-html": "Преамбула відповіді на пост (HTML)",
         "posting_reply_quote-all": "Цитувати пост цілком у відповіді",
         "posting_reply_subject-prefix": "Префікс заголовка при відповіді на пост",
         "posting_smileys_enabled": "Замінювати прості смайлики на емодзі",
