An icon after links in the visual editor allowing to open the link in a new tab.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -462,6 +462,7 @@
   "only-selected-allowed": "Only selected are allowed",
   "only-selected-allowed-star-preferred": "Only selected are allowed, marked by <0/> are preferred",
   "open": "Open",
+  "open-link": "Open link",
   "operation-at": "at",
   "operation-status": {
     "added": "Operation has been added",
