Redesigned advanced features in the composer.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -15,6 +15,7 @@
   "add-me-friend-group": "Dodaj mnie do grupy znajomych \"{group}\"",
   "add-me-friends": "Dodaj mnie do znajomych",
   "addons-changed-conflict": "Lista dodatków została zmieniona.",
+  "advanced-options": "Opcje zaawansowane",
   "alert-text": "Tekst alertu",
   "align": "Wyrównaj",
   "all": "Wszystko",
@@ -77,6 +78,7 @@
   "clipboard-contains-formatting": "Schowek zawiera tekst z formatowaniem. Czy chcesz wkleić tekst z tagami formatującymi?",
   "clock-differ": "<b>Ostrzeżenie:</b> Zegar w Twoim komputerze znacznie różni się od rzeczywistego czasu. Może to wpłynąć na algorytmy kryptograficzne i powodować problemy dla klienta Moera. Zaleca się włączenie synchronizacji zegara w systemie operacyjnym.",
   "close": "Zamknij",
+  "close-advanced-options": "Zamknij opcje zaawansowane",
   "code": "Kod",
   "code-block": "Blok kodu",
   "collapse": "Zwiń ↑",
