--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -15,6 +15,7 @@
   "add-me-friend-group": "Добавить меня в группу друзей \"{group}\"",
   "add-me-friends": "Добавить меня в друзья",
   "addons-changed-conflict": "Список дополнений был изменён.",
+  "advanced-options": "Расширенные возможности",
   "alert-text": "Текст предупреждения",
   "align": "Выравнивание",
   "all": "Все",
@@ -77,6 +78,7 @@
   "clipboard-contains-formatting": "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
   "clock-differ": "<b>Предупреждение:</b> Часы на вашем компьютере существенно отличаются от реального времени. Это может повлиять на криптографические алгоритмы и создать проблемы для клиента Moera. Рекомендуется включить синхронизацию времени в вашей операционной системе.",
   "close": "Закрыть",
+  "close-advanced-options": "Закрыть расширенные возможности",
   "code": "Код",
   "code-block": "Блок кода",
   "collapse": "Свернуть ↑",
