--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -15,6 +15,7 @@
   "add-me-friend-group": "Додати мене до групи друзів \"{group}\"",
   "add-me-friends": "Додати мене до друзів",
   "addons-changed-conflict": "Список додатків був змінений.",
+  "advanced-options": "Розширені можливості",
   "alert-text": "Текст попередження",
   "align": "Вирівнювання",
   "all": "Усі",
@@ -77,6 +78,7 @@
   "clipboard-contains-formatting": "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
   "clock-differ": "<b>Попередження:</b> Годинник на вашому комп'ютері істотно відрізняється від реального часу. Це може вплинути на криптографічні алгоритми та створити проблеми для клієнта Moera. Бажано увімкнути синхронізацію часу у вашій операційній системі.",
   "close": "Закрити",
+  "close-advanced-options": "Закрити розширені можливості",
   "code": "Код",
   "code-block": "Блок коду",
   "collapse": "Згорнути ↑",
