--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -15,6 +15,7 @@
   "add-me-friend-group": "Add me to the group of friends \"{group}\"",
   "add-me-friends": "Add me to friends",
   "addons-changed-conflict": "List of add-ons has been changed.",
+  "advanced-options": "Advanced options",
   "alert-text": "Alert text",
   "align": "Align",
   "all": "All",
@@ -77,6 +78,7 @@
   "clipboard-contains-formatting": "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "clock-differ": "<b>Warning:</b> Clock in your computer significantly differ from the real time. This may affect cryptographic algorithms and cause problems for Moera client. It is recommended to turn clock synchronization on in your operating system.",
   "close": "Close",
+  "close-advanced-options": "Close advanced options",
   "code": "Code",
   "code-block": "Code block",
   "collapse": "Collapse ↑",
