--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -487,7 +487,7 @@
   "pin": "Pin",
   "pinned-post": "Pinned post",
   "popularity-blog-search": "Popularity of Your Blog in Search",
-  "post-button": "Post",
+  "post-button": "Publish",
   "post-edited-conflict": "The post was edited by somebody.",
   "posting-not-found": "Post is not found or cannot be displayed.",
   "posting-updated-at": "updated",
