Changing author's in the composer with a dialog instead of an entry field.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -63,7 +63,8 @@
   "caption-optional": "Caption under the image (optional)",
   "careful-grant-access": "Please be careful and don't grant access to any application you're not familiar with.",
   "change": "Change",
-  "change-date-time": "Change Date/Time",
+  "change-author-name": "Change author's name",
+  "change-date-time": "Change date/time",
   "change-date-time-ellipsis": "Change date/time...",
   "change-friend-groups": "Change groups of the friend {name}",
   "change-groups": "Change groups of friends",
@@ -492,10 +493,9 @@
   "posting-not-found": "Post is not found or cannot be displayed.",
   "posting-updated-at": "updated",
   "post-not-allowed": "You cannot post to this blog.",
-  "post-preview": "Post Preview",
+  "post-preview": "Preview post",
   "preparing": "Preparing...",
   "preserve-formatting": "Preserve formatting",
-  "preview": "Preview",
   "previous-image": "Previous image",
   "principal-title": {
     "admin": "Admin",
