--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -63,6 +63,7 @@
   "caption-optional": "Подпись под картинкой (необязательно)",
   "careful-grant-access": "Пожалуйста, будьте осторожны и не предоставляйте доступ незнакомым приложениям.",
   "change": "Изменить",
+  "change-author-name": "Изменить имя автора",
   "change-date-time": "Изменить дату/время",
   "change-date-time-ellipsis": "Изменить дату/время...",
   "change-friend-groups": "Изменить группы {gender, select, female {подруги} other {друга}} {name}",
@@ -495,7 +496,6 @@
   "post-preview": "Предпросмотр поста",
   "preparing": "Подготовка...",
   "preserve-formatting": "Сохранить форматирование",
-  "preview": "Просмотр",
   "previous-image": "Предыдущая картинка",
   "principal-title": {
     "admin": "Администратору",
