--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -756,6 +756,11 @@
           "ask": "Запитувати",
           "html": "Вставляти з тегами",
           "text": "Вставляти тільки текст"
+        },
+        "src-format_default": "Форматування профілю та інших текстів (за замовчуванням)",
+        "src-format_default-items": {
+          "html--visual": "Візуальний редактор",
+          "plain-text": "Без форматування"
         }
       }
     },
