--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -756,6 +756,11 @@
           "ask": "Спрашивать",
           "html": "Вставлять с тегами",
           "text": "Вставлять только текст"
+        },
+        "src-format_default": "Форматирование профиля и других текстов (по умолчанию)",
+        "src-format_default-items": {
+          "html--visual": "Визуальный редактор",
+          "plain-text": "Без форматирования"
         }
       }
     },
