No need to add ellipsis to menu items.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -27,7 +27,6 @@
   "application-name": "Application name",
   "ask": "Ask",
   "ask-count": "Ask {count} {count, plural, one {user} other {users}}",
-  "ask-ellipsis": "Ask...",
   "asking-access-permissions": "is asking to access your blog with the following permissions:",
   "ask-node": "Ask {name}",
   "auto": "Auto",
@@ -45,8 +44,7 @@
   "block": "Block",
   "blocked": "Blocked",
   "blocked-plural": "Blocked",
-  "block-ellipsis": "Block...",
-  "blocking-ellipsis": "Blocking...",
+  "blocking": "Blocking",
   "blocking-node": "Blocking {name}",
   "blocking-reason": "Reason of blocking",
   "blocking-till": "Blocking till",
@@ -65,12 +63,10 @@
   "change": "Change",
   "change-author-name": "Change author's name",
   "change-date-time": "Change date/time",
-  "change-date-time-ellipsis": "Change date/time...",
   "change-friend-groups": "Change groups of the friend {name}",
   "change-groups": "Change groups of friends",
   "change-home-password": "Change Home Password",
-  "change-password": "Change Password",
-  "change-password-ellipsis": "Change Password...",
+  "change-password": "Change password",
   "choose-decision": "Please, choose your decision...",
   "choose-request": "Choose a request...",
   "clear-formatting": "Clear formatting",
@@ -213,7 +209,6 @@
   "edit": "Edit",
   "edit-comment": "Edit Comment",
   "edit-donation": "Edit Donation",
-  "edit-ellipsis": "Edit...",
   "edit-image": "Edit Image",
   "edit-link-preview": "Edit link preview",
   "edit-post-title": "Edit Post",
@@ -247,7 +242,7 @@
   "forgot-password": "Forgot password",
   "formula": "Formula",
   "friend": "Friend",
-  "friend-groups": "Groups of friends...",
+  "friend-groups": "Groups of friends",
   "friend-groups.friends": "Friends",
   "friend-group-visibility": {
     "admin": "Private",
@@ -270,14 +265,13 @@
   "hide": "Hide",
   "hide-blog-google-play": "Do not show the blog <b>{name}</b> on Android (Google Play).",
   "hide-comment-google-play": "Do not show the comment \"{heading}\" on Android (Google Play).",
-  "hide-content-in-google-play": "Hide all content in Android (Google Play)...",
+  "hide-content-in-google-play": "Hide all content in Android (Google Play)",
   "hide-content-user-in-google-play": "Do you really want to hide all content of user <b>{name}</b> in all blogs in Android (Google Play)?",
-  "hide-ellipsis": "Hide...",
   "hide-friendship": "Hide friendship",
   "hide-hidden-comments": "Hide hidden comments",
   "hide-in-discussion": "Hide in the discussion",
   "hide-in-discussions": "Hide in discussions",
-  "hide-in-google-play": "Hide in Android (Google Play)...",
+  "hide-in-google-play": "Hide in Android (Google Play)",
   "hide-my-subscription": "Hide my subscription",
   "hide-post-google-play": "Do not show the post \"{heading}\" on Android (Google Play).",
   "hide-subscription-to-me": "Hide subscription to me",
@@ -288,7 +282,7 @@
   "image": "Image",
   "image-internet": "Image from the Internet",
   "image-size": {
-    "custom": "Custom...",
+    "custom": "Custom",
     "full": "Full",
     "large": "Large",
     "medium": "Medium",
@@ -302,7 +296,7 @@
   "in-friends": "In friends",
   "inline-formula": "Inline formula",
   "in-post": "In the post",
-  "insert-into-text": "Insert into text...",
+  "insert-into-text": "Insert into text",
   "insert-link": "Insert a link",
   "insert-mention": "Insert a mention",
   "instants": "Notifications",
@@ -379,7 +373,7 @@
   "i-think-comment-hide": "I think, the comment \"{heading}\" should be hidden.",
   "i-think-post-hide": "I think, the post \"{heading}\" should be hidden.",
   "kick": "Kick",
-  "kick-ellipsis": "Kick from discussion...",
+  "kick-discussion": "Kick from discussion",
   "kicking-node": "Kick {name} from the discussion",
   "language": "Language",
   "last-post": "last",
@@ -389,7 +383,7 @@
   "links": "Links",
   "load-all-comments": "Load all comments",
   "loading-preview": "Loading preview",
-  "load-more": "Load more...",
+  "load-more": "Load more",
   "load-newer-posts": "Load newer posts",
   "load-older-posts": "Load older posts",
   "login-incorrect": "Blog name or password is incorrect",
@@ -403,7 +397,7 @@
   "mention-copied": "Mention copied to the clipboard",
   "menu": "Menu",
   "message": "Message",
-  "more": "More...",
+  "more": "More",
   "more-links": "{count} {count, plural, one {link} other {links}}",
   "more-reactions": "{remaining} more",
   "more-reactions-hidden": "{remaining} more hidden",
@@ -584,9 +578,8 @@
   "remind-later": "Remind later",
   "rename-token": "Rename a Token",
   "reply": "Reply",
-  "reply-ellipsis": "Reply...",
   "reply-prev-comment": "Reply to previous comment",
-  "report-sheriff-ellipsis": "Report to sheriff...",
+  "report-sheriff": "Report to sheriff",
   "report-sheriff-sent": "Report to sheriff sent",
   "report-sheriff-title": "Report to sheriff",
   "resend-mail": "Send mail again",
@@ -849,7 +842,6 @@
   "settings": "Settings",
   "settings-incorrect-values": "Some settings have incorrect values.",
   "share": "Share",
-  "share-ellipsis": "Share...",
   "share-page": "Share page",
   "sheriff-decided-not-publish-complaints": "The sheriff decided not to publish the complaints.",
   "sheriff-order": "Sheriff's Order",
@@ -932,9 +924,9 @@
   "unhide": "Unhide",
   "unhide-blog-google-play": "Do you really want to unhide the blog <b>{name}</b> in Android (Google Play)?",
   "unhide-comment-google-play": "Do you really want to unhide the comment \"{heading}\" in Android (Google Play)?",
-  "unhide-content-in-google-play": "Unhide all content in Android (Google Play)...",
+  "unhide-content-in-google-play": "Unhide all content in Android (Google Play)",
   "unhide-content-user-in-google-play": "Do you really want to unhide all content of user <b>{name}</b> in all blogs in Android (Google Play)?",
-  "unhide-in-google-play": "Unhide in Android (Google Play)...",
+  "unhide-in-google-play": "Unhide in Android (Google Play)",
   "unhide-post-google-play": "Do you really want to unhide the post \"{heading}\" in Android (Google Play)?",
   "unkick": "Take back",
   "unknown-name": "Unknown name",
