--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -27,7 +27,6 @@
   "application-name": "Nazwa aplikacji",
   "ask": "Zapytaj",
   "ask-count": "Zapytaj {count} {count, plural, one {użytkownika} few {użytkowników} many {użytkowników} other {użytkowników}}",
-  "ask-ellipsis": "Zapytaj...",
   "asking-access-permissions": "prosi o dostęp do Twojego bloga z następującymi uprawnieniami:",
   "ask-node": "Zapytaj {name}",
   "auto": "Auto",
@@ -45,8 +44,7 @@
   "block": "Zablokuj",
   "blocked": "Zablokowany",
   "blocked-plural": "Zablokowani",
-  "block-ellipsis": "Zablokuj...",
-  "blocking-ellipsis": "Blokowanie...",
+  "blocking": "Blokowanie",
   "blocking-node": "Blokowanie {name}",
   "blocking-reason": "Powód blokowania",
   "blocking-till": "Blokowanie do",
@@ -65,12 +63,10 @@
   "change": "Zmień",
   "change-author-name": "Zmień imię autora",
   "change-date-time": "Zmień datę/czas",
-  "change-date-time-ellipsis": "Zmień datę/czas...",
   "change-friend-groups": "Zmień grupy znajomego {name}",
   "change-groups": "Zmień grupy {gender, select, female {znajomej} other {znajomego}} {name}",
   "change-home-password": "Zmień hasło do domu",
   "change-password": "Zmień hasło",
-  "change-password-ellipsis": "Zmień hasło...",
   "choose-decision": "Proszę wybrać swoją decyzję...",
   "choose-request": "Wybierz żądanie...",
   "clear-formatting": "Wyczyść formatowanie",
@@ -213,7 +209,6 @@
   "edit": "Edytuj",
   "edit-comment": "Edytuj komentarz",
   "edit-donation": "Edytuj darowiznę",
-  "edit-ellipsis": "Edytuj...",
   "edit-image": "Edytuj obraz",
   "edit-link-preview": "Edytuj podgląd linku",
   "edit-post-title": "Edytuj post",
@@ -247,7 +242,7 @@
   "forgot-password": "Zapomniałem hasła",
   "formula": "Formuła",
   "friend": "Znajomyj",
-  "friend-groups": "Grupy znajomych...",
+  "friend-groups": "Grupy znajomych",
   "friend-groups.friends": "Znajomy",
   "friend-group-visibility": {
     "admin": "Prywatny",
@@ -270,14 +265,13 @@
   "hide": "Ukryj",
   "hide-blog-google-play": "Nie pokazuj bloga <0>{name}</0> w Androidzie (Google Play).",
   "hide-comment-google-play": "Nie pokazuj komentarza \"{heading}\" w Androidzie (Google Play).",
-  "hide-content-in-google-play": "Ukryj całą treść na Androidzie (Google Play)...",
+  "hide-content-in-google-play": "Ukryj całą treść na Androidzie (Google Play)",
   "hide-content-user-in-google-play": "Czy na pewno chcesz ukryć całą treść użytkownika <b>{name}</b> we wszystkich blogach na Androidzie (Google Play)?",
-  "hide-ellipsis": "Ukryj...",
   "hide-friendship": "Ukryj znajomość",
   "hide-hidden-comments": "Ukryj ukryte komentarze",
   "hide-in-discussion": "Ukryj w dyskusji",
   "hide-in-discussions": "Ukryj w dyskusjach",
-  "hide-in-google-play": "Ukryj w Androidzie (Google Play)...",
+  "hide-in-google-play": "Ukryj w Androidzie (Google Play)",
   "hide-my-subscription": "Ukryj moją subskrypcję",
   "hide-post-google-play": "Nie pokazuj posta \"{heading}\" w Androidzie (Google Play).",
   "hide-subscription-to-me": "Ukryj subskrypcję do mnie",
@@ -288,7 +282,7 @@
   "image": "Obrazek",
   "image-internet": "Obraz z Internetu",
   "image-size": {
-    "custom": "Niestandardowy...",
+    "custom": "Niestandardowy",
     "full": "Pełny",
     "large": "Duży",
     "medium": "Średni",
@@ -302,7 +296,7 @@
   "in-friends": "W znajomych",
   "inline-formula": "Formuła w tekście",
   "in-post": "W poście",
-  "insert-into-text": "Wstaw do tekstu...",
+  "insert-into-text": "Wstaw do tekstu",
   "insert-link": "Wstaw link",
   "insert-mention": "Wstaw wzmiankę",
   "instants": "Powiadomienia",
@@ -379,7 +373,7 @@
   "i-think-comment-hide": "Myślę, że komentarz „{heading}” powinien zostać ukryty.",
   "i-think-post-hide": "Myślę, że post „{heading}” powinien zostać ukryty.",
   "kick": "Wyrzuć",
-  "kick-ellipsis": "Wyrzuć z dyskusji...",
+  "kick-discussion": "Wyrzuć z dyskusji",
   "kicking-node": "Wyrzuć {name} z dyskusji",
   "language": "Język",
   "last-post": "ostatni",
@@ -389,7 +383,7 @@
   "links": "Linki",
   "load-all-comments": "Wczytaj wszystkie komentarze",
   "loading-preview": "Wczytywanie podglądu",
-  "load-more": "Wczytaj więcej...",
+  "load-more": "Wczytaj więcej",
   "load-newer-posts": "Wczytaj nowsze posty",
   "load-older-posts": "Wczytaj starsze posty",
   "login-incorrect": "Nazwa bloga lub hasło są nieprawidłowe",
@@ -403,7 +397,7 @@
   "mention-copied": "Wzmianka skopiowana do schowka",
   "menu": "Menu",
   "message": "Wiadomość",
-  "more": "Więcej...",
+  "more": "Więcej",
   "more-links": "{count} {count, plural, one {link} other {linki}}",
   "more-reactions": "{remaining} więcej",
   "more-reactions-hidden": "{remaining} więcej ukrytych",
@@ -584,9 +578,8 @@
   "remind-later": "Przypomnij mi później",
   "rename-token": "Zmień nazwę tokena",
   "reply": "Odpowiedz",
-  "reply-ellipsis": "Odpowiedz...",
   "reply-prev-comment": "Odpowiedz na poprzedni komentarz",
-  "report-sheriff-ellipsis": "Zgłoś do szeryfa...",
+  "report-sheriff": "Zgłoś do szeryfa",
   "report-sheriff-sent": "Skarga została wysłana do szeryfa",
   "report-sheriff-title": "Skarga do szeryfa",
   "resend-mail": "Wyślij maila ponownie",
@@ -849,7 +842,6 @@
   "settings": "Ustawienia",
   "settings-incorrect-values": "Niektóre ustawienia mają nieprawidłowe wartości.",
   "share": "Udostępnij",
-  "share-ellipsis": "Udostępnij...",
   "share-page": "Udostępnij stronę",
   "sheriff-decided-not-publish-complaints": "Szeryf zdecydował się nie publikować skarg.",
   "sheriff-order": "Rozkaz szeryfa",
@@ -932,9 +924,9 @@
   "unhide": "Odkryj",
   "unhide-blog-google-play": "Czy na pewno chcesz odkryć blog <b>{name}</b> w Androidzie (Google Play)?",
   "unhide-comment-google-play": "Czy na pewno chcesz odkryć komentarz \"{heading}\" w Androidzie (Google Play)?",
-  "unhide-content-in-google-play": "Odkryj całą treść na Androidzie (Google Play)...",
+  "unhide-content-in-google-play": "Odkryj całą treść na Androidzie (Google Play)",
   "unhide-content-user-in-google-play": "Czy na pewno chcesz ujawnić całą treść użytkownika <b>{name}</b> we wszystkich blogach na Androidzie (Google Play)?",
-  "unhide-in-google-play": "Odkryj w Androidzie (Google Play)...",
+  "unhide-in-google-play": "Odkryj w Androidzie (Google Play)",
   "unhide-post-google-play": "Czy na pewno chcesz odkryć post \"{heading}\" w Androidzie (Google Play)?",
   "unkick": "Cofnij wyrzucenie",
   "unknown-name": "Nieznana nazwa",
