--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -27,7 +27,6 @@
   "application-name": "Имя приложения",
   "ask": "Попросить",
   "ask-count": "Попросить {count} {count, plural, one {пользователя} other {пользователей}}",
-  "ask-ellipsis": "Попросить...",
   "asking-access-permissions": "запрашивает доступ к вашему блогу со следующими полномочиями:",
   "ask-node": "Попросить {name}",
   "auto": "Авто",
@@ -45,8 +44,7 @@
   "block": "Заблокировать",
   "blocked": "Заблокирован",
   "blocked-plural": "Заблокированные",
-  "block-ellipsis": "Заблокировать...",
-  "blocking-ellipsis": "Блокировка...",
+  "blocking": "Блокировка",
   "blocking-node": "Блокировка {name}",
   "blocking-reason": "Причина блокировки",
   "blocking-till": "Блокировка до",
@@ -65,12 +63,10 @@
   "change": "Изменить",
   "change-author-name": "Изменить имя автора",
   "change-date-time": "Изменить дату/время",
-  "change-date-time-ellipsis": "Изменить дату/время...",
   "change-friend-groups": "Изменить группы {gender, select, female {подруги} other {друга}} {name}",
   "change-groups": "Изменить группы друзей",
   "change-home-password": "Изменить домашний пароль",
   "change-password": "Изменить пароль",
-  "change-password-ellipsis": "Изменить пароль...",
   "choose-decision": "Пожалуйста, выберите свой вариант...",
   "choose-request": "Выберите просьбу...",
   "clear-formatting": "Убрать форматирование",
@@ -213,7 +209,6 @@
   "edit": "Изменить",
   "edit-comment": "Редактировать комментарий",
   "edit-donation": "Редактировать донат",
-  "edit-ellipsis": "Редактировать...",
   "edit-image": "Редактировать картинку",
   "edit-link-preview": "Редактировать предпросмотр ссылки",
   "edit-post-title": "Редактировать пост",
@@ -247,7 +242,7 @@
   "forgot-password": "Забыл пароль",
   "formula": "Формула",
   "friend": "Друг",
-  "friend-groups": "Группы друзей...",
+  "friend-groups": "Группы друзей",
   "friend-groups.friends": "Друзья",
   "friend-group-visibility": {
     "admin": "Приватная",
@@ -270,14 +265,13 @@
   "hide": "Скрыть",
   "hide-blog-google-play": "Не показывать блог <b>{name}</b> в Android (Google Play).",
   "hide-comment-google-play": "Не показывать комментарий \"{heading}\" в Android (Google Play).",
-  "hide-content-in-google-play": "Скрыть весь контент в Android (Google Play)...",
+  "hide-content-in-google-play": "Скрыть весь контент в Android (Google Play)",
   "hide-content-user-in-google-play": "Вы действительно хотите скрыть весь контент пользователя <b>{name}</b> во всех блогах в Android (Google Play)?",
-  "hide-ellipsis": "Скрыть...",
   "hide-friendship": "Скрыть дружбу",
   "hide-hidden-comments": "Спрятать скрытые комментарии",
   "hide-in-discussion": "Скрыть в обсуждении",
   "hide-in-discussions": "Скрыть в обсуждениях",
-  "hide-in-google-play": "Скрыть в Android (Google Play)...",
+  "hide-in-google-play": "Скрыть в Android (Google Play)",
   "hide-my-subscription": "Скрыть мою подписку",
   "hide-post-google-play": "Не показывать пост \"{heading}\" в Android (Google Play).",
   "hide-subscription-to-me": "Скрыть подписку на меня",
@@ -288,7 +282,7 @@
   "image": "Картинка",
   "image-internet": "Картинка из Интернета",
   "image-size": {
-    "custom": "Любой...",
+    "custom": "Любой",
     "full": "Полный",
     "large": "Большой",
     "medium": "Средний",
@@ -302,7 +296,7 @@
   "in-friends": "В друзьях",
   "inline-formula": "Встроенная формула",
   "in-post": "В посте",
-  "insert-into-text": "Вставить в текст...",
+  "insert-into-text": "Вставить в текст",
   "insert-link": "Вставить ссылку",
   "insert-mention": "Вставить упоминание",
   "instants": "Уведомления",
@@ -379,7 +373,7 @@
   "i-think-comment-hide": "Я считаю, что комментарий \"{heading}\" следует скрыть.",
   "i-think-post-hide": "Я считаю, что пост \"{heading}\" следует скрыть.",
   "kick": "Выгнать",
-  "kick-ellipsis": "Выгнать из обсуждения...",
+  "kick-discussion": "Выгнать из обсуждения",
   "kicking-node": "Выгнать {name} из обсуждения",
   "language": "Язык",
   "last-post": "последний",
@@ -389,7 +383,7 @@
   "links": "Ссылки",
   "load-all-comments": "Загрузить все комментарии",
   "loading-preview": "Загрузка предпросмотра",
-  "load-more": "Загрузить ещё...",
+  "load-more": "Загрузить ещё",
   "load-newer-posts": "Загрузить новые посты",
   "load-older-posts": "Загрузить старые посты",
   "login-incorrect": "Неверное имя блога или пароль",
@@ -403,7 +397,7 @@
   "mention-copied": "Упоминание скопировано в буфер обмена",
   "menu": "Меню",
   "message": "Сообщение",
-  "more": "Ещё...",
+  "more": "Ещё",
   "more-links": "{count} {count, plural, one {ссылка} few {ссылки} other {ссылок}}",
   "more-reactions": "Ещё {remaining}",
   "more-reactions-hidden": "Ещё {remaining} {remaining, plural, one {скрытая} other {скрытых}}",
@@ -584,9 +578,8 @@
   "remind-later": "Напомнить позже",
   "rename-token": "Переименовать токен",
   "reply": "Ответить",
-  "reply-ellipsis": "Ответить...",
   "reply-prev-comment": "Ответ на предыдущий комментарий",
-  "report-sheriff-ellipsis": "Пожаловаться шерифу...",
+  "report-sheriff": "Пожаловаться шерифу",
   "report-sheriff-sent": "Жалоба шерифу отправлена",
   "report-sheriff-title": "Жалоба шерифу",
   "resend-mail": "Отправить письмо ещё раз",
@@ -849,7 +842,6 @@
   "settings": "Настройки",
   "settings-incorrect-values": "Некоторые настройки установлены в неверные значения.",
   "share": "Поделиться",
-  "share-ellipsis": "Поделиться...",
   "share-page": "Поделиться страницей",
   "sheriff-decided-not-publish-complaints": "Шериф принял решение не публиковать жалобы.",
   "sheriff-order": "Приказ шерифа",
@@ -932,9 +924,9 @@
   "unhide": "Раскрыть",
   "unhide-blog-google-play": "Вы действительно хотите раскрыть блог <b>{name}</b> в Android (Google Play)?",
   "unhide-comment-google-play": "Вы действительно хотите раскрыть комментарий \"{heading}\" в Android (Google Play)?",
-  "unhide-content-in-google-play": "Раскрыть весь контент в Android (Google Play)...",
+  "unhide-content-in-google-play": "Раскрыть весь контент в Android (Google Play)",
   "unhide-content-user-in-google-play": "Вы действительно хотите раскрыть весь контент пользователя <b>{name}</b> во всех блогах в Android (Google Play)?",
-  "unhide-in-google-play": "Раскрыть в Android (Google Play)...",
+  "unhide-in-google-play": "Раскрыть в Android (Google Play)",
   "unhide-post-google-play": "Вы действительно хотите раскрыть пост \"{heading}\" в Android (Google Play)?",
   "unkick": "Вернуть",
   "unknown-name": "Неизвестное имя",
