--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -27,7 +27,6 @@
   "application-name": "Ім'я додатку",
   "ask": "Попросити",
   "ask-count": "Попросити {count} {count, plural, one {користувача} other {користувачів}}",
-  "ask-ellipsis": "Попросити...",
   "asking-access-permissions": "просить доступ до вашого блогу з наступними дозволами:",
   "ask-node": "Попросити {name}",
   "auto": "Авто",
@@ -45,8 +44,7 @@
   "block": "Заблокувати",
   "blocked": "Заблокований",
   "blocked-plural": "Заблоковані",
-  "block-ellipsis": "Заблокувати...",
-  "blocking-ellipsis": "Блокування...",
+  "blocking": "Блокування",
   "blocking-node": "Блокування {name}",
   "blocking-reason": "Причина блокування",
   "blocking-till": "Блокування до",
@@ -65,12 +63,10 @@
   "change": "Змінити",
   "change-author-name": "Змінити ім'я автора",
   "change-date-time": "Змінити дату/час",
-  "change-date-time-ellipsis": "Змінити дату/час...",
   "change-friend-groups": "Змінити групи {gender, select, female {подруги} other {друга}} {name}",
   "change-groups": "Змінити групи друзів",
   "change-home-password": "Змінити домашній пароль",
   "change-password": "Змінити пароль",
-  "change-password-ellipsis": "Змінити пароль...",
   "choose-decision": "Будь ласка, оберіть рішення...",
   "choose-request": "Виберіть прохання...",
   "clear-formatting": "Прибрати форматування",
@@ -213,7 +209,6 @@
   "edit": "Змінити",
   "edit-comment": "Редагувати коментар",
   "edit-donation": "Редагувати донат",
-  "edit-ellipsis": "Редагувати...",
   "edit-image": "Редагувати картинку",
   "edit-link-preview": "Редагувати перегляд посилання",
   "edit-post-title": "Редагувати пост",
@@ -247,7 +242,7 @@
   "forgot-password": "Забув пароль",
   "formula": "Формула",
   "friend": "Друг",
-  "friend-groups": "Групи друзів...",
+  "friend-groups": "Групи друзів",
   "friend-groups.friends": "Друзі",
   "friend-group-visibility": {
     "admin": "Приватна",
@@ -270,14 +265,13 @@
   "hide": "Приховати",
   "hide-blog-google-play": "Не показувати блог <b>{name}</b> у Android (Google Play).",
   "hide-comment-google-play": "Не показувати коментар \"{heading}\" у Android (Google Play).",
-  "hide-content-in-google-play": "Сховати весь контент у Android (Google Play)...",
+  "hide-content-in-google-play": "Сховати весь контент у Android (Google Play)",
   "hide-content-user-in-google-play": "Ви дійсно бажаєте сховати весь контент користувача <b>{name}</b> в усіх блогах у Android (Google Play)?",
-  "hide-ellipsis": "Приховати...",
   "hide-friendship": "Приховати дружбу",
   "hide-hidden-comments": "Сховати приховані коментарі",
   "hide-in-discussion": "Приховати в обговоренні",
   "hide-in-discussions": "Приховати в обговореннях",
-  "hide-in-google-play": "Сховати у Android (Google Play)...",
+  "hide-in-google-play": "Сховати у Android (Google Play)",
   "hide-my-subscription": "Приховати мою підписку",
   "hide-post-google-play": "Не показувати пост \"{heading}\" у Android (Google Play).",
   "hide-subscription-to-me": "Приховати підписку на мене",
@@ -288,7 +282,7 @@
   "image": "Картинка",
   "image-internet": "Картинка з Інтернету",
   "image-size": {
-    "custom": "Будь-який...",
+    "custom": "Будь-який",
     "full": "Повний",
     "large": "Великий",
     "medium": "Середній",
@@ -302,7 +296,7 @@
   "in-friends": "У друзях",
   "inline-formula": "Вбудована формула",
   "in-post": "У пості",
-  "insert-into-text": "Вставити в текст...",
+  "insert-into-text": "Вставити в текст",
   "insert-link": "Вставити посилання",
   "insert-mention": "Вставити згадку",
   "instants": "Повідомлення",
@@ -379,7 +373,7 @@
   "i-think-comment-hide": "Я вважаю, що коментар \"{heading}\" слід приховати.",
   "i-think-post-hide": "Я вважаю, що пост \"{heading}\" слід приховати.",
   "kick": "Вигнати",
-  "kick-ellipsis": "Вигнати з обговорення...",
+  "kick-discussion": "Вигнати з обговорення",
   "kicking-node": "Вигнати {name} з обговорення",
   "language": "Мова",
   "last-post": "останній",
@@ -389,7 +383,7 @@
   "links": "Посилання",
   "load-all-comments": "Завантажити усі коментарі",
   "loading-preview": "Завантаження перегляду",
-  "load-more": "Завантажити ще...",
+  "load-more": "Завантажити ще",
   "load-newer-posts": "Завантажити нові пости",
   "load-older-posts": "Завантажити старі пости",
   "login-incorrect": "Неправильне ім'я блога або пароль",
@@ -403,7 +397,7 @@
   "mention-copied": "Згадка скопійована до буфера обміну",
   "menu": "Меню",
   "message": "Повідомлення",
-  "more": "Ще...",
+  "more": "Ще",
   "more-links": "{count} {count, plural, one {посилання} few {посилання} other {посилань}}",
   "more-reactions": "Ще {remaining}",
   "more-reactions-hidden": "Ещё {remaining} {remaining, plural, one {прихована} other {прихованих}}",
@@ -584,9 +578,8 @@
   "remind-later": "Нагадати пізніше",
   "rename-token": "Перейменувати токен",
   "reply": "Відповісти",
-  "reply-ellipsis": "Відповісти...",
   "reply-prev-comment": "Відповідь на попередній коментар",
-  "report-sheriff-ellipsis": "Поскаржитись до шерифа...",
+  "report-sheriff": "Поскаржитись до шерифа",
   "report-sheriff-sent": "Скаргу до шерифа надіслано",
   "report-sheriff-title": "Скарга до шерифа",
   "resend-mail": "Відправити листа ще раз",
@@ -849,7 +842,6 @@
   "settings": "Налаштування",
   "settings-incorrect-values": "Деякі налаштування встановлені в неправильні значення.",
   "share": "Поділитися",
-  "share-ellipsis": "Поділитися...",
   "share-page": "Поділитися сторінкою",
   "sheriff-decided-not-publish-complaints": "Шериф прийняв рішення не публікувати скарги.",
   "sheriff-order": "Наказ шерифа",
@@ -932,9 +924,9 @@
   "unhide": "Розкрити",
   "unhide-blog-google-play": "Ви дійсно бажаєте розкрити блог <b>{name}</b> у Android (Google Play)?",
   "unhide-comment-google-play": "Ви дійсно бажаєте розкрити коментар \"{heading}\" у Android (Google Play)?",
-  "unhide-content-in-google-play": "Розкрити весь контент у Android (Google Play)...",
+  "unhide-content-in-google-play": "Розкрити весь контент у Android (Google Play)",
   "unhide-content-user-in-google-play": "Ви дійсно бажаєте розкрити весь контент користувача <b>{name}</b> в усіх блогах у Android (Google Play)?",
-  "unhide-in-google-play": "Розкрити у Android (Google Play)...",
+  "unhide-in-google-play": "Розкрити у Android (Google Play)",
   "unhide-post-google-play": "Ви дійсно бажаєте розкрити пост \"{heading}\" у Android (Google Play)?",
   "unkick": "Повернути",
   "unknown-name": "Невідоме ім'я",
